--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -28,3 +28,17 @@ spec:
         enabled: true
         existingClaim: "home-assistant-config-pvc"
         subPath: esphome
+    ingress:
+      enabled: true
+      annotations:
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
+        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+      hosts:
+        - host: esphome.${SECRET_DOMAIN}
+          paths:
+          - path: /
+            pathType: Prefix
+      tls:
+        - hosts:
+            - "esphome.${SECRET_DOMAIN}"
+          secretName: "esphome-tls"
