change ingress to nodeport

--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
         subPath: esphome
     ingress:
       main:
-        enabled: true
+        enabled: false
         hosts:
           - host: esphome.${SECRET_DOMAIN}
             paths:
