--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -105,12 +105,12 @@
       "packageNames": ["plexinc/pms-docker"],
       "labels": ["auto-update"]
     },
-    // auto-updates minor/patch
+    // auto-updates major/minor/patch
     {
       "datasources": ["docker"],
       "automerge": true,
       "requiredStatusChecks": null,
-      "updateTypes": ["minor", "patch"],
+      "updateTypes": ["major","minor", "patch"],
       "packageNames": [
         "factoriotools/factorio",
         "codercom/code-server",
