--- a/cluster/apps/kube-system/nfs-subdir-external-provider/helm-release.yaml
+++ b/cluster/apps/kube-system/nfs-subdir-external-provider/helm-release.yaml
@@ -19,10 +19,12 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    replicaCount: 1
+    replicaCount: 2
     nfs:
-      server: 192.168.1.20
-      path: "/volume12"
+      server: "192.168.1.20"
+      path: "/volume12/PVCs"
+      mountOptions:
+        - noatime
     storageClass:
       defaultClass: false
       pathPattern: "${.PVC.namespace}-${.PVC.name}"
