--- a/cluster/apps/kube-system/nfs-subdir-external-provider/helm-release.yaml
+++ b/cluster/apps/kube-system/nfs-subdir-external-provider/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
     replicaCount: 2
     nfs:
       server: "192.168.1.20"
-      path: "/volume12/PVCs"
+      path: "/volume12/pvc"
       mountOptions:
         - noatime
     storageClass:
