--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - node-feature-discovery-charts.yaml
   - prometheus-community-charts.yaml
   - rancher-charts.yaml
+  - longhorn-charts.yaml
   - rook-ceph-charts.yaml
   - stakater-charts.yaml
   - traefik-charts.yaml
