--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -16,6 +16,14 @@ spec:
         name: metallb-charts
         namespace: flux-system
   values:
+    controller:
+      image:
+        repository: quay.io/metallb/controller
+        tag: v0.11.0
+    speaker:
+      image:
+        repository: quay.io/metallb/speaker
+        tag: v0.11.0
     configInline:
       address-pools:
         - name: default
