--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -68,13 +68,24 @@ spec:
     config: |
       mqtt:
         host: mosquitto
-        topic_prefix: frigate
       objects:
         track:
           - person
       ffmpeg:
         output_args:
           record: -f segment -segment_time 10 -segment_format mp4 -reset_timestamps 1 -strftime 1 -c copy -c:a aac
+      record:
+        enabled: True
+        retain_days: 5
+      snapshots:
+        enabled: True
+        timestamp: False
+        bounding_box: True
+        height: 450
+        retain:
+          default: 5
+      rtmp:
+        enabled: True
       cameras:
         garage:
           ffmpeg:
@@ -89,16 +100,6 @@ spec:
           motion:
             mask:
               - 1373,1080,1371,1005,1870,1005,1870,1080
-          record:
-            enabled: True
-            retain_days: 5
-          snapshots:
-            enabled: True
-            timestamp: True
-            bounding_box: True
-            height: 450
-            retain:
-              default: 3
         declanroom:
           ffmpeg:
             inputs:
@@ -112,16 +113,6 @@ spec:
           motion:
             mask:
               - 1373,1080,1371,1005,1870,1005,1870,1080
-          record:
-            enabled: True
-            retain_days: 5
-          snapshots:
-            enabled: True
-            timestamp: False
-            bounding_box: True
-            height: 450
-            retain:
-              default: 3
       database:
         path: /media/frigate.db
       detectors:
