enable debug logging

--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -66,6 +66,8 @@ spec:
         mountPath: /dev/shm
     
     config: |
+      logger:
+        default: debug
       mqtt:
         host: mosquitto
       objects:
