update mqtt hostname

--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -69,7 +69,7 @@ spec:
       logger:
         default: debug
       mqtt:
-        host: mosquitto
+        host: mosquitto.home.svc.cluster.local
       objects:
         track:
           - person
