--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -72,7 +72,7 @@ spec:
           logger:
             default: debug
           mqtt:
-            host: mosquitto.home.svc.cluster.local
+            host: mosquitto
           objects:
             track:
               - person
