--- a/cluster/apps/networking/blocky/helm-release.yaml
+++ b/cluster/apps/networking/blocky/helm-release.yaml
@@ -94,7 +94,7 @@ spec:
       prometheus:
         enable: false
         path: /metrics
-      bootstrapDns: tcp:1.1.1.1
+      bootstrapDns: tcp+udp:1.1.1.1
       httpPort: 4000
       logFormat: json
       logLevel: warn
