--- a/cluster/apps/home/mealie/helm-release.yaml
+++ b/cluster/apps/home/mealie/helm-release.yaml
@@ -19,6 +19,7 @@ spec:
   values:
     image:
       repository: hkotel/mealie
+      tag: frontend-v1.0.0beta-2
     env: 
       TZ: "America/Denver"
     hostNetwork: true
