--- a/cluster/apps/home/mealie/helm-release.yaml
+++ b/cluster/apps/home/mealie/helm-release.yaml
@@ -20,6 +20,12 @@ spec:
     image:
       repository: hkotel/mealie
       tag: frontend-v1.0.0beta-2
+    api:
+      image: 
+        repository: hkotel/mealie
+        tag: api-v1.0.0beta-2
+      env:
+        TZ: "America/Denver"
     env: 
       TZ: "America/Denver"
     hostNetwork: true
