--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -10,6 +10,8 @@ stringData:
     SECRET_CAMERA_CONNECTION_GARAGE: ENC[AES256_GCM,data:Rsrz2aMOhMRKcfcDBjMiD+4lcSRiayMyb7RyAZWGSP4Z3vLWHiSJvJAWddxcKPi1,iv:hPIBXvg/irjgRGnbwK8VczTVbONyDV1JD8bsSgHPkTs=,tag:gCemfMnnlu/WJfOsI+qgjg==,type:str]
     SECRET_CAMERA_CONNECTION_DECLANROOM: ENC[AES256_GCM,data:p9G0hL/g63GlOKLmLjXRhfd7gGUCzuPKe0eWV2AOYICP7bbVJ6m5oGEa2HYt4bg=,iv:CzB6O3ALvuitBSqTlCpkNxrPIIKFrGZLaKxuNkl/WzM=,tag:aq6h+rMQlDg0uMHOg7q1KA==,type:str]
     SECRET_PLEX_CLAIM: ENC[AES256_GCM,data:/zuCrOwRR0i0sQjFpFElHwdlvXO3F35VNeM=,iv:4/ief35zBV+VAlWYMHXAAbyYAFVbnjYI3ECxnLAcatk=,tag:P3++T9TypesmPOwchTLSnw==,type:str]
+    SECRET_FACTORIO_TOKEN: ENC[AES256_GCM,data:MfTUr1KSqSi1+Fcnr1Fy0h1NBpp0Pp4MinCOwLey,iv:cgqnUSYm2WeFWXWD1zvHsBsAtha2dtbe9nqiYNguCq4=,tag:MI6l1hX9c5hEaZUx+xKYtg==,type:str]
+    SECRET_FACTORIO_USERNAME: ENC[AES256_GCM,data:YaHndgDaZuqT,iv:wHwokf0uTYFlnMwDHNBoRF6S3nknpW6nOm52emvb3eE=,tag:zcCIU0k5PyCz3RjuohiV7Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,8 +27,8 @@ sops:
             OExmSzRnRHNFTE1MaTFGMnR0cmRYRzQKA42j8W2wjuuw+HvSET6z5kYgMf0zX42V
             TiMHob898+7S2i28Wv3JTMhQWROsQdCfn+pXpR8I/dNdkv0RxnKNWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-12T22:41:41Z"
-    mac: ENC[AES256_GCM,data:nGVoiW1obX35nFB7xrh1p5ooosvjF9RtfcjHZKnQ08ytC3rlzLfkpWqLo/mIUvZHIQ2DAQI4iaXslg6oK9bcDTzfRpIjgXPIFHaYmXcvq/O8ylCO6/WUATEVWzFUVIdKAWayM95JBf1hKQPVdeyuaAEEfoRFxoFFKbLFqYHExH8=,iv:RgKnwVxVxWtqBTcdcBbNK8wybiQq7EmU/JUMronZMo0=,tag:NXVPxNuy9x3bm8pE+ktWUg==,type:str]
+    lastmodified: "2022-07-29T02:20:18Z"
+    mac: ENC[AES256_GCM,data:yRO5VPcx11GyqFpsNU217FaRU89IU1AVJtRkPIyURQghGHxelZQcCI0CIK2x0rKvWCb8AN5eSJMDGhEk0gbYvmBPXVJQrXO4EXBHw7QVnN0O22bGyTW4ixeGoyI+IwGtmgNnENzKBncxA1gWWCjdcXFHC3b6M8IaCzftdnMixKw=,iv:OvBaKht9es+WWXTj3/+Aks7qvIaW6uiiDVR1+hgR44Q=,tag:SleFUcsmkFWjoKOw/gE+TA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
