--- a/cluster/apps/games/factorio/deployment.yaml
+++ b/cluster/apps/games/factorio/deployment.yaml
@@ -29,7 +29,7 @@ spec:
               name: factorio-vol
           env:
             - name: SAVE_NAME
-              value: WithDad2021
+              value: RailWorld
             - name: LOAD_LATEST_SAVE
               value: "false"
             - name: TOKEN
