update ema-reader secret

--- a/cluster/apps/home/ema-reader/secret.yaml
+++ b/cluster/apps/home/ema-reader/secret.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -9,7 +8,7 @@ stringData:
     AUTH_USERNAME: ENC[AES256_GCM,data:vj6bzbLVGjbOlLzwg6In0vM=,iv:6HpUxcQQ32mKaDgvXXOzgL9KXL2Xhm1//3RQvSi4gxM=,tag:KSb5Xo0gAE9WFm7GKyiLKA==,type:str]
     AUTH_PASSWORD: ENC[AES256_GCM,data:vtHZbXBrb89iAEL1,iv:bbwNGvojrAFJE32/f5d29d5r9y41XDkvTK2SYDnvkaY=,tag:UB7SrJvQFZku/MvePZdivw==,type:str]
     MQTT_HOSTNAME: ENC[AES256_GCM,data:isU7JKoWG8Tp,iv:SXLnDd81bsWES5bIYRlSUJ/ZTJxQ/N7REoVMxOR3Drc=,tag:uZx2KPJAQkYbDw41/QMO3A==,type:str]
-    MQTT_PORT: ENC[AES256_GCM,data:66dvQQ==,iv:pcI7oKk8kqIomFa0eNVG0actltvBLvwyV9J9VTtnYtg=,tag:peF3yejHUjRfAvE3gV4nPw==,type:int]
+    MQTT_PORT: ENC[AES256_GCM,data:hEJPbg==,iv:5AGY/LEM+F0sjRDajOvaxTxGBhONHySbJ6YMIwUnCPQ=,tag:uX+LrdElxMPFM9hWsad7zw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,8 +24,8 @@ sops:
             YWZmSW9qaTNScXcxMXFsZDJZa3kyWlkKAYtYkB8PefZejCvFLrlUWtOqcxuP50IA
             n/LB5ljb7NBV+gsGWqGLqN6xV8rbaJJgLWXHjIlFBJGlFS6PqKUiKg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-05T04:50:45Z"
-    mac: ENC[AES256_GCM,data:QfK6rtOlnB7Doh5ii/dSXj8O7HJQLrLCqRzt02cRZohoNsXaUfgIKAZR9oO68Kx+/4FJ5Jqe1wOdpSXerif5CHghkCiOdEqUp4BEXU0B+GUzQsWBXd5b3KX5Gdo++GtEi2wdQKbNMzI9qthycFFSw4+awo+ouwJKytfSj6xRF5g=,iv:/+4bLhVkObaG2KQAhicGkM/Wo+/7teTji6LSkiESeE8=,tag:biGraNW5TDCp9cRV5V5ulg==,type:str]
+    lastmodified: "2022-08-05T05:05:20Z"
+    mac: ENC[AES256_GCM,data:bagQgQuOeQ4APIfCSewe/t1drPwoScvlBWfBeOjKCwMwt8P9kJgUXRLmy7bqivhsMwS1WHu8tMoZgrIZ3SoDiQ5r0bV074xMIqov+LyFBYvFYUFJrI+Hs7KamXYW+p4WdMl+ZdyGxJ4+J7JHMGkps3s3pAkYM40Yk9AXTIr7Pls=,iv:0/B1DRNxPJlrefB6IyGkYtlGFV2EHCZil1ukajF78cM=,tag:K7GPKtOK85cCfG8fujsANQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
