fix ema-reader typos

--- a/cluster/apps/home/ema-reader/cronjob.yaml
+++ b/cluster/apps/home/ema-reader/cronjob.yaml
@@ -22,9 +22,9 @@ spec:
               name: ema-reader-secrets
             volumeMounts:
             - mountPath: /ema-reader
-              name: ema-reader-config
+              name: config
           restartPolicy: Never
           volumes:
           - name: config
-            configmap:
+            configMap:
               name: ema-reader-config
