--- a/cluster/apps/home/ema-reader/secret.yaml
+++ b/cluster/apps/home/ema-reader/secret.yaml
@@ -5,10 +5,7 @@ metadata:
     name: ema-reader-secrets
     namespace: home
 stringData:
-    AUTH_USERNAME: ENC[AES256_GCM,data:vj6bzbLVGjbOlLzwg6In0vM=,iv:6HpUxcQQ32mKaDgvXXOzgL9KXL2Xhm1//3RQvSi4gxM=,tag:KSb5Xo0gAE9WFm7GKyiLKA==,type:str]
-    AUTH_PASSWORD: ENC[AES256_GCM,data:vtHZbXBrb89iAEL1,iv:bbwNGvojrAFJE32/f5d29d5r9y41XDkvTK2SYDnvkaY=,tag:UB7SrJvQFZku/MvePZdivw==,type:str]
-    MQTT_HOSTNAME: ENC[AES256_GCM,data:isU7JKoWG8Tp,iv:SXLnDd81bsWES5bIYRlSUJ/ZTJxQ/N7REoVMxOR3Drc=,tag:uZx2KPJAQkYbDw41/QMO3A==,type:str]
-    MQTT_PORT: ENC[AES256_GCM,data:hEJPbg==,iv:5AGY/LEM+F0sjRDajOvaxTxGBhONHySbJ6YMIwUnCPQ=,tag:uX+LrdElxMPFM9hWsad7zw==,type:str]
+    secret.yml: ENC[AES256_GCM,data:LRSevPWA+Sl/kVFhWCo/pzbb9BnuctuwLupxI2fJUG4y+tkjKitJvxSNPccNLXryuJpXdKRB1mgI8kN30MBZE5RTghA5w6dVt8MuC1KO+yqwOvXtCtkRB9sAIwzv8/JcQkbbsLhUnci4mrFk8v2yOv5Hp5V6Gw==,iv:G6twYsEXZMag3SKvdpWEhcOpKAodMkiu68UlwOpADF0=,tag:hN4eixoa/9si2+XwfJkj1A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +21,8 @@ sops:
             YWZmSW9qaTNScXcxMXFsZDJZa3kyWlkKAYtYkB8PefZejCvFLrlUWtOqcxuP50IA
             n/LB5ljb7NBV+gsGWqGLqN6xV8rbaJJgLWXHjIlFBJGlFS6PqKUiKg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-05T05:05:20Z"
-    mac: ENC[AES256_GCM,data:bagQgQuOeQ4APIfCSewe/t1drPwoScvlBWfBeOjKCwMwt8P9kJgUXRLmy7bqivhsMwS1WHu8tMoZgrIZ3SoDiQ5r0bV074xMIqov+LyFBYvFYUFJrI+Hs7KamXYW+p4WdMl+ZdyGxJ4+J7JHMGkps3s3pAkYM40Yk9AXTIr7Pls=,iv:0/B1DRNxPJlrefB6IyGkYtlGFV2EHCZil1ukajF78cM=,tag:K7GPKtOK85cCfG8fujsANQ==,type:str]
+    lastmodified: "2022-08-09T03:34:56Z"
+    mac: ENC[AES256_GCM,data:gszFnGu2/0y3/f6RQRj1zbZdjp3l+WJ2hL8ZT8xo7rBO0nPUz+ZOB1iRoPsNJvPQ2pMkFjsG5nqpoJFgWyd2foH22fjCTthwCOQbt6iBOHRqL3pJk6nZUfWIPkp11Yx+3o3alRn1w+USv23SW+pk5/EwOGxcICJChT8ZUYy3tMI=,iv:ttybu6oRQNnZLcJ6RXutLdJHcJyRF4zCLYOwdSYjN1w=,tag:55DaKWi6wlaxngEzgD4J/A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
