--- a/cluster/apps/home/ema-reader/configmap.yaml
+++ b/cluster/apps/home/ema-reader/configmap.yaml
@@ -8,7 +8,7 @@ data:
   config.yml: |-
     webdriver:
       driver_opts:
-        - "--headless"
+      - "--headless"
 
     auth:
       login_url: "https://www.apsystemsema.com/ema/index.action"
@@ -25,9 +25,9 @@ data:
         accept-language: "en-US,en;q=0.9"
         cache-control: "no-cache"
         pragma: "no-cache"
-        sec-ch-ua: "\" Not;A Brand\";v=\"99\", \"Microsoft Edge\";v=\"103\", \"Chromium\";v=\"103\""
+        sec-ch-ua: '" Not;A Brand";v="99", "Microsoft Edge";v="103", "Chromium";v="103"'
         sec-ch-ua-mobile: "?0"
-        sec-ch-ua-platform: "\"Windows\""
+        sec-ch-ua-platform: '"Windows"'
         sec-fetch-dest: "empty"
         sec-fetch-mode: "cors"
         sec-fetch-site: "same-origin"
