specify docker hub as frr registry

--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -24,6 +24,9 @@ spec:
       image:
         repository: quay.io/metallb/speaker
         tag: v0.13.4
+      frr:
+        image:
+          repository: frrouting/frr
     configInline:
       address-pools:
         - name: default
