--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -10,20 +10,19 @@ spec:
     spec:
       # renovate: registryUrl=https://metallb.github.io/metallb
       chart: metallb
-      version: 0.13.7
-      sourceRef:
-        kind: HelmRepository
+      version: 0.12.1
+      sourceRef:        kind: HelmRepository
         name: metallb-charts
         namespace: flux-system
   values:
     controller:
       image:
         repository: quay.io/metallb/controller
-        tag: v0.13.7
+        tag: v0.12.1
     speaker:
       image:
         repository: quay.io/metallb/speaker
-        tag: v0.13.7
+        tag: v0.12.1
       frr:
         image:
           repository: frrouting/frr
