--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -10,26 +10,31 @@ spec:
     spec:
       # renovate: registryUrl=https://metallb.github.io/metallb
       chart: metallb
-      version: 0.12.1
+      version: 0.13.7
       sourceRef:        
         kind: HelmRepository
         name: metallb-charts
         namespace: flux-system
+  install:
+    remediation:
+      retries: 3
+    crds: CreateReplace
+  upgrade:
+    crds: CreateReplace
   values:
+    crds:
+      enabled: true
+    psp:
+      create: false  
     controller:
       image:
         repository: quay.io/metallb/controller
-        tag: v0.12.1
+        tag: v0.13.7
     speaker:
       image:
         repository: quay.io/metallb/speaker
-        tag: v0.12.1
+        tag: v0.13.7
       frr:
         image:
           repository: frrouting/frr
-    configInline:
-      address-pools:
-        - name: default
-          protocol: layer2
-          addresses:
-            - "${METALLB_LB_RANGE}" 
+
