--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -2,36 +2,36 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: plex
+  name: &app plex
   namespace: media
 spec:
-  interval: 5m
+  interval: 15m
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: plex
-      version: 6.4.3
+      chart: app-template
+      version: 1.1.3
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
-      interval: 5m
+  install:
+    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
+  dependsOn:
+    - name: longhorn
+      namespace: longhorn-system
   values:
+    controller:
+      type: deployment
     image:
       repository: plexinc/pms-docker
       tag: 1.29.2.6364-6d72b0cf6
-      pullPolicy: IfNotPresent
-
     env:
       TZ: "America/Denver"
-      ALLOWED_NETWORKS: 192.168.1.0/24
-      PLEX_CLAIM: ${SECRET_PLEX_CLAIM} 
-      PLEX_PREFERENCE_1: "FriendlyName=HancockPlex"
-
-    hostNetwork: true
-
-    dnsPolicy: ClusterFirstWithHostNet
-
     ingress:
       main:
         enabled: true
@@ -45,23 +45,30 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/icon: "plex"
         hosts:
-          - host: plex.${SECRET_DOMAIN}
+          - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - "plex.${SECRET_DOMAIN}"
+              - *host
             secretName: plex-tls
-
+    volumeClaimTemplates:
+      - name: config
+        mountPath: /config
+        accessMode: ReadWriteOnce
+        size: 20Gi
+        storageClass: longhorn
     persistence:
-      data:
+      media:
         enabled: true
-        existingClaim: "plex-data-pvc"
-      config:
+        type: nfs
+        server: "${NAS_ADDRESS}"
+        path: /volume1/Media/plex
+        mountPath: /media
+      transcode:
         enabled: true
-        existingClaim: "plex-config-pvc-lh"
-
+        type: emptyDir
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
