--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -21,9 +21,9 @@ spec:
   upgrade:
     remediation:
       retries: 5
-  dependsOn:
-    - name: longhorn
-      namespace: longhorn-system
+  # dependsOn:
+  #   - name: longhorn
+  #     namespace: longhorn-system
   values:
     controller:
       type: deployment
