--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
   values:
     image:
       repository: blakeblackshear/frigate
-      tag: 0.11.1-amd64
+      tag: 0.11.1
       pullPolicy: IfNotPresent
     replicaCount: 0
     strategy:
