--- a/cluster/apps/home/mqtt/app-template-helm-release.yaml
+++ b/cluster/apps/home/mqtt/app-template-helm-release.yaml
@@ -2,20 +2,25 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: mosquitto
+  name: &app mosquitto
   namespace: home
 spec:
-  interval: 5m
+  interval: 15m
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: mosquitto
-      version: 4.8.2
+      chart: app-template
+      version: 1.1.3
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
-      interval: 5m
+  install:
+    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
   values:
     image:
       repository: eclipse-mosquitto
@@ -24,7 +29,6 @@ spec:
     replicas: 1
     strategy:
       type: Recreate
-
     # -- Configures service settings for the chart. Normally this does not need to be modified.
     service:
       main:
@@ -36,18 +40,18 @@ spec:
             enabled: true
             port: 1883
             primary: true
-
     auth:
       # -- By enabling this, `allow_anonymous` gets set to `false` in the mosquitto config.
       enabled: false
-
     persistence:
       # -- Configure a persistent volume to place mosquitto data in.
       # When enabled, this enables `persistence` and `persistence_location` in the mosquitto config.
       data:
         enabled: true
+        type: nfs
+        server: "${NAS_ADDRESS}"
+        path: /volume9/mqtt
         mountPath: /mosquitto/data
-        existingClaim: mosquitto-config-pvc
       # -- Configure a persistent volume to place *.conf mosquitto-config-files in.
       # When enabled, this gets set as `include_dir` in the mosquitto config.
       configinc:
