readd frigate mqtt config

--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -70,6 +70,8 @@ spec:
         enabled: true
         data: 
           config.yml: |
+            mqtt:
+              host: mosquitto
             objects:
               track:
                 - person
