--- a/cluster/apps/home/mqtt/app-template-helm-release.yaml
+++ b/cluster/apps/home/mqtt/app-template-helm-release.yaml
@@ -8,6 +8,7 @@ spec:
   interval: 15m
   chart:
     spec:
+      # renovate: registryUrl=https://k8s-at-home.com/charts/
       chart: app-template
       version: 1.1.3
       sourceRef:
