--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -90,10 +90,10 @@ spec:
         pathType: Prefix
         annotations:
           kubernetes.io/ingress.class: traefik 
-          cert-manager.io/cluster-issuer: "letsencrypt-production"
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           external-dns/is-public: "true"
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           hajimari.io/appName: "Grafana"
           hajimari.io/enable: "true"
           hajimari.io/icon: "graph"
@@ -102,6 +102,7 @@ spec:
         tls:
           - hosts:
               - "grafana.${SECRET_DOMAIN}"
+            secretName: "teslamate-tls"        
     prometheus:
       enabled: false
       ingress:
